kubernetes/trx-receiver/trx-receiver-deployment.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: trx-receiver
  labels:
    app: infra-devops
    component: trx-receiver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infra-devops
      component: trx-receiver
  template:
    metadata:
      name: trx-receiver
      labels:
        app: infra-devops
        component: trx-receiver
    spec:
      containers:
        - image: alexyakovlev90/trx-receiver
          name: trx-receiver
