kubernetes/trx-receiver/trx-receiver-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: trx-receiver
  labels:
    app: infra-devops
    component: trx-receiver
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: infra-devops
    component: trx-receiver
